Add Dockerfiles and configuration for deployment